# opengl_plato

./: CMakeLists.txt  README.md
src/: GLErrorManager.h  GLFWHandler.cpp  GLFWHandler.h  ImGuiHandler.cpp  ImGuiHandler.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp  main_intro.cpp  main_intro2.cpp  plato.cpp  plato.h  tests.cpp  tests.h
src/res/shaders/: Basic.shader
